k8s/service.yaml
# ------------------- BACKEND SERVICE -------------------
apiVersion: v1
kind: Service
metadata:
  name: snapurl-backend-service
spec:
  type: ClusterIP
  selector:
    app: snapurl-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

---
# ------------------- FRONTEND SERVICE -------------------
apiVersion: v1
kind: Service
metadata:
  name: snapurl-frontend-service
spec:
  type: NodePort
  selector:
    app: snapurl-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
