k8s/snapurl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snapurl-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snapurl-backend
  template:
    metadata:
      labels:
        app: snapurl-backend
    spec:
      containers:
      - name: snapurl-backend
        image: vamshi7923/snapurl-backend:latest
        ports:
        - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snapurl-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snapurl-frontend
  template:
    metadata:
      labels:
        app: snapurl-frontend
    spec:
      containers:
      - name: snapurl-frontend
        image: vamshi7923/snapurl-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: snapurl-backend-service
spec:
  type: ClusterIP
  selector:
    app: snapurl-backend
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: snapurl-frontend-service
spec:
  type: NodePort
  selector:
    app: snapurl-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
